tests/core/error/parameter-1.rq
# Mix langtag with parameters
SELECT (~a@es AS ?str) { }
